# tpRigToolkit-tools-musclespline

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tpMuscleSplineRig.py
docs/sphinx/: conf.py  index.rst
docs/sphinx/_templates/: layout.html
tests/: test_general.py
tpRigToolkit/: __init__.py
tpRigToolkit/tools/: __init__.py
tpRigToolkit/tools/musclespline/: __init__.py  __logging__.ini  __version__.py  _version.py
tpRigToolkit/tools/musclespline/core/: controller.py  model.py  musclespline.py  musclesplineclient.py  view.py
tpRigToolkit/tools/musclespline/dccs/maya/: musclesplineserver.py
