[metadata]
name = tpRigToolkit-tools-musclespline
description = Python based Maya Muscle Spline rig builder
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-musclespline

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/tools/musclespline/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =